--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "dependencies": {
     "body-parser": "^1.19.2",
     "express": "^4.17.3",
-    "mariadb": "^3.0.0"
+    "ioredis": "^4.28.5",
+    "mariadb": "^3.0.0",
+    "redis": "^4.0.4"
   },
   "scripts": {
     "start": "node server.js"
